--- a/Pages/blueprint.html
+++ b/Pages/blueprint.html
@@ -393,10 +393,11 @@
         </section>
 
         <section id="sec2" class="sections" style="padding-top: 50px;">
-                <h1>Solution</h1>
-        
-                I explored several different solutions and workflows before coming up with a proposal. Inspired by the application Ritual which I used to order my lunch meals, I found a way to keep the application consistent with checkboxes
-                while comparing two versions at a time. 
+                <h1>Solution</h1><br>
+                Through iteration it was understood that the version compare feature would be more consistent with the whole application if it reused components found in other Utility Panel tabs such as the Relationship Tab. I explored several different solutions and workflows before coming up with a proposal. Inspired by the application Ritual which I used to order my lunch meals, I found a way to keep the application consistent with checkboxes while comparing two versions at a time. 
+                <br><br>
+                Using Ritual almost every other day provided for a user experience that I found useful in building out the version compare feature. When I used to select my salad toppings, I realized that once I had exceeded the limit of toppings for the meal then the UI automatically deselected the first topping I chose. This user experience was suitable for the version compare feature as the user could select multiple versions but the version compare icon would only occur on the last two versions selected. 
+
                 <!-- <div style="padding-top: 20px; width:97%;">
                     <h3 class="case-study-small-title">Feature implementation</h3>
                     Once a design solution was selected, it was important to understand the work behind the feature. Front-end libraries were explored to ensure that the feature's functionality worked as promised to user. 
