--- a/Pages/interests.html
+++ b/Pages/interests.html
@@ -1,55 +1,49 @@
-<!-- Photo Grid -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Kritika Mehta | Interests</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
-        <link rel="stylesheet" href="index.css">
+  <title>Kritika Mehta | Interests</title>
+  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 </head>
-       
 <body>
-<div>
-    <h4>Hi, my name is&nbsp;<span class="" style="color:#a339b0;">Kritika</span> - a passionate designer and product builder who codes</h4>
-<!--<p class="side">&lt; That's me during the first week of university in the famous E5 tunnel @ the University of Waterlo </p>-->
-<div class="about-me">Made in India & raised in Canada, I live at the intersection of creative design, innovative development, and hypothesis-driven business. As a curious, broad-minded individual I enjoy problem-solving and challenging work.
-</div> 
-</div>
-<div class="row"> 
-        <div class="column">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/falls2.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-          <img src="/w3images/nature.jpg" style="width:100%">
-          <img src="/w3images/mist.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-          <img src="/w3images/ocean.jpg" style="width:100%">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/mountainskies.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-        </div>  
-        <div class="column">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/falls2.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-          <img src="/w3images/nature.jpg" style="width:100%">
-          <img src="/w3images/mist.jpg" style="width:100%">
-          <img src="/w3images/paris.jpg" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-          <img src="/w3images/ocean.jpg" style="width:100%">
-          <img src="/w3images/wedding.jpg" style="width:100%">
-          <img src="/w3images/mountainskies.jpg" style="width:100%">
-          <img src="/w3images/rocks.jpg" style="width:100%">
-          <img src="/w3images/underwater.jpg" style="width:100%">
-        </div>
+
+  
+  <div class="project-title interests-title">
+      <p> 
+          Art & Photography
+      </p>
+  </div>
+  <div class="container-gallery">
+    <div class="gallery">
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="../Images/drawing_mickey.jpeg">
       </div>
-    </body>
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="../Images/drawing_up.jpg">
+      </div>
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="https://images.unsplash.com/photo-1506045412240-22980140a405?w=300&h=300&fit=crop">
+      </div>
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="https://images.unsplash.com/photo-1514041181368-bca62cceffcd?w=300&h=300&fit=crop">
+      </div>
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="https://images.unsplash.com/photo-1445810694374-0a94739e4a03?w=300&h=300&fit=crop">
+      </div>
+  
+      <div class="gallery-item">
+        <img class="gallery-image" src="https://images.unsplash.com/photo-1486334803289-1623f249dd1e?w=300&h=300&fit=crop">
+      </div>
+  
+    </div>
+  
+  </div>
+     
+</body>
+</html>
