--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div id="portfolio" class="section-2">
                 <div class="container-11 visualizations w-container">
-                    <a href="#" class="make-shift w-inline-block">
+                    <a href="./Pages/honeypot.html" class="make-shift w-inline-block">
                         <div class="div-block-16"><img src="./Images/Phone-Honeypot.png" sizes="(max-width: 479px) 75vw, (max-width: 767px) 73vw, (max-width: 991px) 313.78125px, 421.765625px" alt="" class="preview---tablet desktop-1"></div>
                         <div class="div-block-17">
                             <p class="project-title">Honeypot App
@@ -160,8 +160,12 @@
                     </a>
                 </div>
         </div>
-
         <div class="footer">
+            <a href="#top" style="padding-top: 50px; align-items:right;"> 
+                <span>
+                    <i class="up"></i>
+                 </span>
+            </a>
                 <p> Built by Kritika with <i class="fa fa-coffee"></i> &amp;  <i class="fa fa-laptop"></i> <br></p>
             </div>
     </div>
