added path to see honeypot

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <span><div class="project-info">Highlighting differences for comparison                        </div></span></p>
                         <div class="category-chips">
                             <div class="text-chip">
-                                <h4 class="chip">Check it out</h4></div>
+                                <h4 class="chip">Check it out!</h4></div>
                         </div>
                     </div>
                 </a>
@@ -134,7 +134,7 @@
                             <span><div class="project-info">Financial Budgeting for Student Life</div></span></p>
                             <div class="category-chips">
                                 <div class="text-chip">
-                                    <h4 class="chip">Coming Soon!</h4>
+                                    <h4 class="chip">Check it out!</h4>
                                 </div>
                                     <!--<h4 class="chip">Check it out</h4></div>-->
                             </div>
