add back button

--- a/Pages/honeypot.html
+++ b/Pages/honeypot.html
@@ -403,16 +403,20 @@
     </div>
    
 </div>
-
-
 <div class="footer">
-    <p> Built by Kritika with <i class="fa fa-coffee"></i> &amp;  <i class="fa fa-laptop"></i> <br></p>
-    <a href="#top" style="padding-top: 50px; align-items:right;"> 
-        <span>
-            <i class="up"></i>
-            </span>
+    <p> Built by Kritika with <i class="fa fa-coffee"></i> &amp;  <i class="fa fa-laptop"></i>
+    <span><a href="#top" style="align-items:right;"> 
+        <div class="category-chips" style="padding-top:25px;">
+            <div class="text-chip">
+                <h4 class="chip">Back to Top   &#8593;</span>
+                </div>
+                <!--<h4 class="chip">Check it out</h4></div>-->
+        </div>
     </a>
+    </span>
+    </p>
 </div>
+
 </body>
 </html>
 
