add Lifion by ADP proj

--- a/Pages/interests.html
+++ b/Pages/interests.html
@@ -19,7 +19,7 @@
   <button class="w3-bar-item w3-button" onclick="openCity('London')">Women in Engineering</button>
   <button class="w3-bar-item w3-button" onclick="openCity('Ottawa')">Dance</button>
   <button class="w3-bar-item w3-button" onclick="openCity('Paris')">Art & Travel</button>
-  <button class="w3-bar-item w3-button" onclick="openCity('Tokyo')">Vlogs</button>
+  <button class="w3-bar-item w3-button" onclick="window.location.href = 'https://www.instagram.com/eggcusemydiet/?hl=en';">Instagram</button>
 </div>
 
 
@@ -134,14 +134,23 @@ First recipient of the National Canadian Engineering Memorial Foundation's
         <br>
         <br>
          I love dancing!
-         <a href="https://fusioncardiotoronto.com/volunteer-instructors-helpers">I teach older adults dance at the Fustion Cardio Toronto
+         <a href="https://fusioncardiotoronto.com/volunteer-instructors-helpers">I teach students and older adults dance at the Fustion Cardio Toronto
           during my internships.
                 </a>
 
-                <br>
-                During schools, I teach students at the University of Waterloo PAC Studio. 
-              </div>
-              </div>
+      <br>
+      <br>
+      <br>
+        <img class="gallery-image-2" src="../Images/dance_bangra.jpg">
+        <br>
+        <br>
+        <br>
+        <br>
+        During schools, I teach students at the University of Waterloo PAC Studio. 
+        <img class="gallery-image-2" style="margin-top: 100px;" src="../Images/Dance_PAC.png">
+      </div>
+    </div>
+    </div>
     </div>
 </div>
 
@@ -156,8 +165,7 @@ First recipient of the National Canadian Engineering Memorial Foundation's
     
       <div class="project-title">
           <p> 
-Vlogs      
- </p>
+<a href="https://www.instagram.com/eggcusemydiet/?hl=en">Food blogging </a></p>
           <br>
 
           <div class="">
