--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
      </div>
 
     <!--Portfolio-->
+    <div id="portfolio" class="section-2">
+        <div class="container-11 visualizations w-container">
+            <a href="#" class="make-shift w-inline-block">
+                <div class="div-block-16"><img src="./Images/Lifion_ADP.png" sizes="(max-width: 479px) 75vw, (max-width: 767px) 83vw, (max-width: 991px) 313.78125px, 421.765625px" alt="" class="preview---tablet desktop"></div>
+                <div class="div-block-17">
+                    <p class="project-title">Standout Application
+                    <span><div class="project-info">Increasing team engagement and performance to drive results</div></span></p>
+                    <div class="category-chips">
+                        <div class="text-chip">
+                            <h4 class="chip">Currently in the works!</h4></div>
+                    </div>
+                </div>
+            </a>
+      </div>
+    </div>
         <div id="portfolio" class="section-2">
             <div class="container-11 visualizations w-container">
                 <a href="./Pages/blueprint.html" class="make-shift w-inline-block">
