Changes to content + added new job & resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div>
                 <ul class="main-nav">
                     <li><a href="#me" class="nav-link">about me</a></li>
-                    <li><a href="./Assets/latest-resume-2020.pdf" target="_blank" class="nav-link" style="color: black;">resume</a></li>        
+                    <li><a href="./Assets/Kritika_2020_Resume.pdf" target="_blank" class="nav-link" style="color: black;">resume</a></li>        
                     <li><a href="#portfolio" class="nav-link">portfolio</a></li>
                     <li><a href="./Pages/interests.html" class="nav-link">interests</a></li>  <!--interests-->
                 </ul>
@@ -44,10 +44,10 @@
                     <div class="jobs">
                         <span style="color:#a339b0;">previously</span>
                         <span class="color_15"><a href="https://www.blueprintsys.com/">&nbsp;@ Blueprint Software Systems</a></span><br>
-                        <span style="color:#a339b0db;">incoming</span>
-                        <span class="color_15"><a href="https://lifion.com/">&nbsp;@ Lifion by ADP</a></span><br>
-                        <span style="color:#b753c3b0;">seeking</span>
-                        <span class="color_15">&nbsp;Summer 2020 internship</span>
+                        <span style="color:#a339b0db;">currently</span>
+                        <span class="color_15"><a href="https://lifion.com/">&nbsp;       @ Lifion by ADP</a></span><br>
+                        <span style="color:#b753c3b0;">incoming</span>
+                        <span class="color_15">&nbsp;   @ Salesforce</span>
                     </div>
                     <br>
             
