--- a/Pages/interests.html
+++ b/Pages/interests.html
@@ -48,7 +48,7 @@
 First recipient of the National Canadian Engineering Memorial Foundation's
  Nellie Giffin Engineering Award for demonstrating exceptional leadership in her community and being a role model for young women in engineering.
           Read more about it 
-          <a href="https://uwaterloo.ca/engineering/news/first-year-struggles-national-scholarship">here!</a>
+          <a style="color: #a339b0" href="https://uwaterloo.ca/engineering/news/first-year-struggles-national-scholarship">here!</a>
         </div>
       <br>
       <br>
@@ -134,10 +134,8 @@ First recipient of the National Canadian Engineering Memorial Foundation's
         <br>
         <br>
          I love dancing!
-         <a href="https://fusioncardiotoronto.com/volunteer-instructors-helpers">I teach students and older adults dance at the Fustion Cardio Toronto
-          during my internships.
-                </a>
-
+    During my internships, I teach students and older adults dance at the <a style="color: #a339b0" href="https://fusioncardiotoronto.com/volunteer-instructors-helpers">Fustion Cardio Toronto.</a>
+    I also love to perform at social events with dancers from my school. 
       <br>
       <br>
       <br>
