link new project to home

--- a/Pages/blueprint.html
+++ b/Pages/blueprint.html
@@ -101,8 +101,8 @@
                 <p class="case-study-small-text">
                     <ul class="goals-list">
                         <b>
-                        <li>Design and develop a feature that is consistent with the Storytell product</li>
-                        <li>Design the version tracking feature considering edge cases</li>
+                        <li>Design and develop a feature that is consistent with the Storyteller product</li>
+                        <li>Design the version tracking feature considering all edge cases</li>
                         <li>Validate feature solution through usability testing</li>
                         </b>
                     </ul>
