--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
     <!--Portfolio-->
     <div id="portfolio" class="section-2">
         <div class="container-11 visualizations w-container">
-            <a href="#" class="make-shift w-inline-block">
+            <a href="./Pages/lifion.html" class="make-shift w-inline-block">
                 <div class="div-block-16"><img src="./Images/Lifion_ADP.png" sizes="(max-width: 479px) 75vw, (max-width: 767px) 83vw, (max-width: 991px) 313.78125px, 421.765625px" alt="" class="preview---tablet desktop"></div>
                 <div class="div-block-17">
                     <p class="project-title">Standout Application
                     <span><div class="project-info">Increasing team engagement and performance to drive results</div></span></p>
                     <div class="category-chips">
                         <div class="text-chip">
-                            <h4 class="chip">Currently in the works!</h4></div>
+                            <h4 class="chip">Check it out!</h4></div>
                     </div>
                 </div>
             </a>
@@ -167,7 +167,7 @@
                             <span><div class="project-info">Simplifying Rheumatoid Arthritis (RA) Management</div></span></p>
                             <div class="category-chips">
                                 <div class="text-chip">
-                                        <h4 class="chip">Coming Soon!</h4>
+                                        <h4 class="chip">Still in the works!</h4>
                                 </div>
                                     <!--<h4 class="chip">Check it out</h4></div>-->
                                 </div>
