--- a/Pages/lifion.html
+++ b/Pages/lifion.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html class="staticrypt-html">
 <head>
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170631311-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170631311-1');
+</script>
+	
     <meta charset="utf-8">
     <title>Protected Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
