--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     </div>  
                     <div class="jobs">
                         <span style="color:#a339b0;">previously</span>
-                        <span class="color_15"><a href="https://www.blueprintsys.com/">&nbsp;@ Blueprint Software Systems</a></span><br>
+                        <span class="color_15"><a href="https://lifion.com/">&nbsp;@ Lifion by ADP</a></span><br>
                         <span style="color:#a339b0db;">currently</span>
-                        <span class="color_15"><a href="https://lifion.com/">&nbsp;       @ Lifion by ADP</a></span><br>
+                        <span class="color_15"><a href="https://www.salesforce.com/ca/">&nbsp;       @ Salesforce</a></span><br>
                         <span style="color:#b753c3b0;">incoming</span>
-                        <span class="color_15">&nbsp;   @ Salesforce</span>
+                        <span class="color_15"><a href="https://www.shopify.ca/">&nbsp;   @ Shopify</span>
                     </div>
                     <br>
             
